work on authenticity

--- a/_posts/thesis_chapters/2023-11-4-Design.md
+++ b/_posts/thesis_chapters/2023-11-4-Design.md
@@ -1250,35 +1250,30 @@ The process of creating bespoke documentation in the form of code snippets and s
 An interesting design tension here is that of which kind of documentation to prioritise. From the collection of GDP, I first linked directly to code snippets. When step by step tutorials were complete I link to those and at the start of each chapter included a link to the code snippets. In retrospect, my interpretation is that I prioritised the traditional form of instruction over different, bricolage-like developer practices. I propose it would be best to rectify this in future iterations of the design giving each equal weight.  
 
 
-
 #### Analysis in relation to existing research on related design toolsets
-
 
 <!-- Research on other toolsets is instructive when exploring learning design tensions involving issues of authenticity and agency. -->
 
-Existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition were explored in brief in the literature review. [@kafai_constructionism_1996-1; @kafai_mindstorms_2014].
+Existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition were explored in brief in the literature review. [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation. The process of creating a microworld with embedded concepts brought to the fore for students to bump against.
 
-While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation.
+In scratch, the ability to reduce syntax errors through block coding was adopted. Reducing the complexity of coding environment in one of several guidelines in the process of designing toolsets to support creative coding [@resnick_reflections_2005] [@resnick_design_2005].
+
+In my design, I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code. These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
+
+The design behaviours that I am promoting are based on GDPs from the period of P1. Thus this design can be said to be a microworld. One built as a shield area within a more genuine ecology of authentic tool use and practices.
+
+
 
 <!-- This section compares the designed of this study with learning environment to the design factors of others exposed in research. Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling -->
 <!-- While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches []. -->
 
 <!-- Scratch's design as a diverse multimedia tool invites experimentation and play but not in a particular field of maths or coding. Instead more general computing and design skills are imagined as outcomes. See Resnick's take on CT. -->
 
-The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
 
-In scratch, the ability to reduce syntax errors through block coding was adopted. Reducing the complexity of coding environment in one of several guidelines in the process of designing toolsets to support creative coding [@resnick_reflections_2005] [@resnick_design_2005]. Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling
 
-In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
 
-**Simplifying the environment**
+<!-- Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling -->
 
-I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code.
-
-These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
-
-The following issues are relevant to the learner experience- other ways to enclose / protect )
-- Issue of the complexity of support and technical documentation
 
 
 
@@ -1302,11 +1297,17 @@ In my design, the use of GDPs in various scope forms this base: quick start acti
 <!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
 
 
+#### Tool use and implications for authenticity and agency**
 
-**Authentic tool use and forms of agency**
 
-The impact of coding tool use on instrumental agency can be explored here to develop the previous section
 
+In chapters two and three the concepts of agency in learning settings uncovered varied forms of agency. The forms most related to this study was instrumental agency and authorial agency.  
+
+In later chapters I explore the interaction between authenticity and agency in more depth. In this section I highlight only perspectives form this chapter.  
+
+The previous section can be viewed from perspective of designing coding tools to increase instrumental agency thought removing barriers.
+
+The process of using more authentic toolsets has the potential to increase authorial agency. In the example below, greater diversity of tools set
 
 Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills.
 
@@ -1316,20 +1317,10 @@ For example, the processes of replacing a block image with a bespoke pixel sprit
 Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
 
 
-
 <!-- **Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.   -->
 
-
-
-
-
-
-#### Conclusion on authenticity
-
+**Summary / Link**
 While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
-
-On agency?
-
 
 ### On the emergent and mutual nature of the design and research process AND link to agency
 
