quick start card

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1054,6 +1054,10 @@ A similar conflict in the overall activity system was the inability for particip
 
 To support the use of the staring processes outlined above, at the end of P1 I asked trainee computing teachers in my faculty to create printable resources that highlighted the key lines of code in an way that linked to game behaviour. I called these quick start cards (see figure 4.x below).
 
+
+![](./Pictures/velocity_jscard.png){width=95%}
+
+
 ![](./Pictures/quickstart_phaser_1.png){width=50%}
 4.x - Example of a Quick start card
 NOTE -FIND THE JSCARD IN GOOGLE DRIVE DOWNLOAD IT TO WORD AT WORK AND OPEN IT. USE VELOCITY
