--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1056,11 +1056,10 @@ To support the use of the staring processes outlined above, at the end of P1 I a
 
 
 ![](./Pictures/velocity_jscard.png){width=95%}
-
-
-![](./Pictures/quickstart_phaser_1.png){width=50%}
 4.x - Example of a Quick start card
-NOTE -FIND THE JSCARD IN GOOGLE DRIVE DOWNLOAD IT TO WORD AT WORK AND OPEN IT. USE VELOCITY
+
+<!--
+![](./Pictures/quickstart_phaser_1.png){width=50%} -->
 
 
 As outlined above the starter template and quick activities served to address the _use_ and _modify_ stages of the UMC approach. One seeded into the community, these processes also propagated via peer learning in ways which are explored in chapters five in six. In contrast, the _create_ stage required longer input from my self, to help participants with their individual choices of what to add to the game. To address this use of time I developed more extensive help files and documentation as there were not enough facilitators. The next section outlines the different forms of documentation created.  
