--- a/_posts/thesis_chapters/2023-11-4-Design.md
+++ b/_posts/thesis_chapters/2023-11-4-Design.md
@@ -1196,75 +1196,83 @@ An additional rationale for this process was to help reduce potential internal b
 
 ## Chapter Discussion
 
-### Summary of barriers and tensions explored in this chapter
 
-The following summary table lists barriers and tensions drawn from the literature review that were significant when reviewing my journal observations, feedback from participants and video data.
+### Discussion on Authenticity of Tools and Resources
 
-The purpose of this summary is to help recap and ground the reader before exploring the experiences of participants in more detail in chapters five and six. It focuses on use of tools but also signposts some social and cultural elements.
+This chapter has exposed the tensions that developed in the activity systems and subsequent evolution the tools used. The term tools here is used broadly in line with AT's definition to include code authoring environment, supporting resources of printed and digital format, etc. This section begins to explore the value and implications of my choice to privilege authenticity of tool choice in this design.
 
-<!-- NOTE Perhaps linking to appendix. -->
+<!-- NOTE- This chapter's coverage of tool use is incomplete and the use of physical arcade consoles is explored in chapter six.  -->
 
+**Empowerment implications of lifting the hood to expose underlying technology**
 
-| **Barrier / Tension**| **Description** | **Related Intervention**         
-|--------|------------|--------------|
-| Unfamiliarity with language and syntax   | Example: Javascript use of punctuation especially in arrays and in the structuring of functions. |  Use of UMC pedagogy and quick start examples to build familiarity  |
-| Unfamiliarity with coding concepts   | Example: the use of if statements and global variables  |  Supporting resources to reinforce previous experimentation with the code base and facilitator explanation when concepts are met in-situ   |
-| Barriers to comprehending the overall game code template   | The use of preload, create and update functions   |  Outlining the structure in supporting resources and game to reinforce and test tacit knowledge in a playful way |
-| Lack of direct knowledge of game making approaches  | Play states, game design patterns, impact of aesthetics    |  Games and activities to access and surface tacit knowledge, use of a structured GDP collection to reinforce concepts |
-| Alienation from culture of computer coding  | As outlined in literature review.     |  Use of games, play testing and other social approaches. Explored in chapter six |
-| Professional coding tools increase authenticity at the prices of complexity  | While suitable open source tools exist, they need careful curation by faciliators to reduce cognitive load    |  Design of template to surface key affordances.  |
-
-<!-- NOTE Not included
-Social feare, problems of group work
-Attention factors, maintaining persistance
-Learning concepts via instruction is demotivating -->
-
-NOTE - also return to this table
-https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
-or this one
-https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
-
-
-<!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
-After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
-
-### Discussion on Authenticity of Tools
-
-
-
-
-This chapter has exposed the tensions between the value being exposed to the complexity of code and the benefits it can bring. This section develops this theme.
-
-An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.  
+An inspirational aspect of _lifting the hood_ (see LR) on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.  
 
     Pearl: It just shows you what goes into these games.
     Student Helper3: Think about how much effort goes into.
     Pearl: You just take things for granted don’t you?
     [FIND IN 2019-03-18-ch_pa_TOCODE].
 
+Such finding support the motivations of many youth programs which advocate exploration of the technologies which are normally hidden from view as an tactic for empowerment.
+
 <!-- There are similarities and differences between the use of code playgrounds and templates by novices and professionals. A possible interpretation of the use of a template as scaffolding provided in an educational context is that that support is inconsistent with a work place setting environment. However, the use of starter templates is also a common work place tactic.
 
 The motivations for creating starter templates are similar. Both educators and professional template creators want to shield new users from the complexity of the underlying web-technology and instead highlight design affordances that facilitate creative agency. For the learners of this study, agency is expressed via inclusion of home interests, play with dynamics and game layout. The motivations of the professional would include experimentation to check if the framework will support desired end user features. This work helps analysis if it is worth allocating time learning the details of the framework in question.   -->
 
-### Authenticity of processes and documentation
+**Authenticity of processes and documentation**
 
-The process of creating bespoke documentation in the form of code snippets and step by step tutorials can be seen as occupying a pragmatic position on the scale of authenticity. While both were carefully aligned to the specific code template in a way that authentic developer focused documentation would not be, the process still developed skills used in professional settings.
+From early stages in this design, I stopped encouraging participants to search within authentic documentation and help forum for the professional and amateur users of the Phaser javascript library. Instead, in response to participant need, I created  bespoke code examples in an online collection. Thus creating a pragmatic replica of authentic process of finding and incorporating code snippets. The careful alignment between tools code documentation and the starting template was designed to address barriers to the development skills used in authentic code based game making and professional coding. The impact of this is explored chapter five.
 
-An interesting design tension here is that of which kind of documentation to prioritise. From the collection of GDP, I first linked directly to code snippets. When step by step tutorials were complete I link to those and at the start of each chapter included a link to the code snippets. In retrospect, my interpretation is that I prioritised the traditional form of instruction over different, bricolage-like developer practices. I propose it would be best to rectify this in future iterations of the design giving each equal weight.  
+An illustrative design tension emerged surrounding which kind of documentation to prioritise. After initially  steering participants directly to code snippets, I subsequently directed them instead to step by step tutorials which also included a link to the code snippets. In retrospect, my interpretation is that I prioritised the traditional form of instruction over more authentic, bricolage-like (see LR) developer practices. I propose it would be best to rectify this value judgement, in future iterations of the design giving each equal weight.  EXPLAIN WHY
 
 
-#### Analysis in relation to existing research on related design toolsets
 
 <!-- Research on other toolsets is instructive when exploring learning design tensions involving issues of authenticity and agency. -->
+<!-- MOVE TO LR
+Existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition were explored in brief in the literature review. [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation.  -->
+**Analysing the use of code playground and templated approach through the lens of authenticity**
 
-Existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition were explored in brief in the literature review. [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation. The process of creating a microworld with embedded concepts brought to the fore for students to bump against.
+The process of creating a starting template in a coding environment that had been selected to remove common barriers to coding aligns with the motivations and techniques of Microworlds and broader constructionist design principles explored in the Literature review [@resnick_design_2005]. In scratch, the ability to reduce syntax errors through block coding was adopted.  [@resnick_reflections_2005]. In my design, I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code. In Papert's Mathland Microworld where the turtle speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation and the embedded concepts of algebra are experienced by children directly rather than through instruction. A similar process happens in this design. The map of learning dimensions outlined above details some of embedded concepts brought to the fore for students to bump against in their play and experimentation. An additional set of embedded concepts are GDPs which are explore in more details in chapter five.
 
-In scratch, the ability to reduce syntax errors through block coding was adopted. Reducing the complexity of coding environment in one of several guidelines in the process of designing toolsets to support creative coding [@resnick_reflections_2005] [@resnick_design_2005].
 
-In my design, I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code. These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
+**Linking authenticity and agency**
 
-The design behaviours that I am promoting are based on GDPs from the period of P1. Thus this design can be said to be a microworld. One built as a shield area within a more genuine ecology of authentic tool use and practices.
+These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild. One built as a shield area within a more genuine ecology of authentic tool use and practices.
 
+In outlining constructionist design principles Resnick refers to this process as using black boxes.
+DUPLICATION - MOVE HERE?
+
+In chapters two and three the concepts of agency in learning settings uncovered varied forms of agency. The forms most related to this study was instrumental agency and authorial agency.  
+
+In later chapters I explore the interaction between authenticity and agency in more depth. In this section I highlight only perspectives form this chapter.  
+
+The previous section can be viewed from perspective of designing coding tools to increase instrumental agency thought removing barriers.
+
+The process of using more authentic toolsets has the potential to increase authorial agency. In the example below, greater diversity of tools set
+
+Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills.
+
+For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions.
+
+<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
+Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
+
+
+
+
+
+<!-- **Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.   -->
+
+**Summary / Link**
+While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
+
+There is a connection in this process to foundational theories in the area of HCI and computing education.
+In particular the term and theory surrounding the design in in affordances to support and guide participant progress  is instructive and is explored in more details in chapter five and six.
+
+My own reluctance to simplify for the sake of authenticity was mitigated by the influence of participants and other collaborators in the design process. For example, the input of trainee teachers whose recent experience of supporting learners creative intitial scaffolding of task in much more detail than I would have.
+
+REHOME which increased the instrumental agency of the participants.
+
+The next section explores the mutual design process in more detail.
 
 
 <!-- This section compares the designed of this study with learning environment to the design factors of others exposed in research. Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling -->
@@ -1299,32 +1307,6 @@ In my design, the use of GDPs in various scope forms this base: quick start acti
 
 <!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
 
-
-#### Tool use and implications for authenticity and agency**
-
-
-
-In chapters two and three the concepts of agency in learning settings uncovered varied forms of agency. The forms most related to this study was instrumental agency and authorial agency.  
-
-In later chapters I explore the interaction between authenticity and agency in more depth. In this section I highlight only perspectives form this chapter.  
-
-The previous section can be viewed from perspective of designing coding tools to increase instrumental agency thought removing barriers.
-
-The process of using more authentic toolsets has the potential to increase authorial agency. In the example below, greater diversity of tools set
-
-Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills.
-
-For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions.
-
-<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
-Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
-
-
-<!-- **Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.   -->
-
-**Summary / Link**
-While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
-
 ### On the emergent and mutual nature of the design and research process AND link to agency
 
 A different dimension of the agency in this learning process was present via the input of participants in the changing design of the program.
@@ -1339,13 +1321,7 @@ This approach was more prescriptive than I would have adopted, however it worked
 
 The shift of perspective from others and the structure to try it out was very helpful in overcoming conflicts stemming from my pre-conceptions.
 
-The students, fresh from PGCE training focused on increasing a scaffolded task which increased the instrumental agency of the participants.
 
-There is a connection in this process to foundational theories in the area of HCI and computing education.
-
-  - Affordances
-  - UMC literature
-  - Design patterns
 
 <!-- NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY. -->
 
@@ -1367,6 +1343,43 @@ Despite this, the niggling feeling, it looks like fun but are they learning, rem
 
 IS THIS NEEDED / IN THE RIGHT PLACE?
 The process of researching conceptions of agency has allowed me to align my intuitive reluctance to steer participants towards the more abstract curricular concepts to interpretations of agency. In particular, Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals resonates.
+
+
+
+### Summary of barriers and tensions explored in this chapter
+
+The following summary table lists barriers and tensions drawn from the literature review that were significant when reviewing my journal observations, feedback from participants and video data.
+
+The purpose of this summary is to help recap and ground the reader before exploring the experiences of participants in more detail in chapters five and six. It focuses on use of tools but also signposts some social and cultural elements.
+
+<!-- NOTE Perhaps linking to appendix. -->
+
+
+| **Barrier / Tension**| **Description** | **Related Intervention**         
+|--------|------------|--------------|
+| Unfamiliarity with language and syntax   | Example: Javascript use of punctuation especially in arrays and in the structuring of functions. |  Use of UMC pedagogy and quick start examples to build familiarity  |
+| Unfamiliarity with coding concepts   | Example: the use of if statements and global variables  |  Supporting resources to reinforce previous experimentation with the code base and facilitator explanation when concepts are met in-situ   |
+| Barriers to comprehending the overall game code template   | The use of preload, create and update functions   |  Outlining the structure in supporting resources and game to reinforce and test tacit knowledge in a playful way |
+| Lack of direct knowledge of game making approaches  | Play states, game design patterns, impact of aesthetics    |  Games and activities to access and surface tacit knowledge, use of a structured GDP collection to reinforce concepts |
+| Alienation from culture of computer coding  | As outlined in literature review.     |  Use of games, play testing and other social approaches. Explored in chapter six |
+| Professional coding tools increase authenticity at the prices of complexity  | While suitable open source tools exist, they need careful curation by faciliators to reduce cognitive load    |  Design of template to surface key affordances.  |
+
+<!-- NOTE Not included
+Social feare, problems of group work
+Attention factors, maintaining persistance
+Learning concepts via instruction is demotivating -->
+
+NOTE - also return to this table
+https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
+or this one
+https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
+
+
+<!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
+After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
+
+
+
 
 ### Link to next chapter
 
