--- a/_posts/thesis_chapters/archive/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/archive/2023-9-5-Gdps.md
@@ -6,7 +6,8 @@ zotero:
   author-in-text: false # when true, enabled fake author-name-only cites by replacing it with the text of the last names of the authors
   csl-style: harvard-manchester-metropolitan-university # pre-fill the style
 layout: post
-categories: chapter
+categories: archive
+
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
 -   [Chapter introduction and place in the
