--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -115,28 +115,29 @@ Moved impact of software tools here - and overall on templated approach on a mic
 
 ## Chapter Introduction  
 
+
+Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters.
+
 This chapter
 
 <!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
 
 - gives an overview of the evolution of the key pedagogical features of the tools of learning design used in my research process
 - (rewrite) draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
-- outlines 4 key conflicts using the terminology of Saninno in TADS
+- outlines 4 key conflicts using the terminology of 3GAT
 - Presents a synthesis to initial barriers (and) tactics to overcome them
 
 <!-- - Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions. -->
 
-This chapter has a particular focus on the tools and authenticity in relation to other tools. This focus develops a thread of theoretical inquiry around the impact of authenticity of tools and processes in activity systems of learners experiences of activity systems and particular on building agency in
+This chapter concludes with an exploration of the tools and authenticity. This focus begins a thread of theoretical inquiry around the impact of authenticity of tools and processes in activity systems of learners experiences of activity systems and particular on building agency in a new learning setting.
 
 
-Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters.
 
 <!-- The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice. -->
 
 <!-- One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed. Another was to help support the development of peer learning practices and in order to do that help foster a creative environment which suited that. -->
 
-As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges. Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s. This chapter charts the evolution of tools and resources which occupy this middle ground between instruction and free choice creative approaches. Following chapters explore the impact and resulting pedagogies in more depth.
-
+MOVE - As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges. Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s. This chapter charts the evolution of tools and resources which occupy this middle ground between instruction and free choice creative approaches. Following chapters explore the impact and resulting pedagogies in more depth.
 <!-- **Methodology for exposing tensions**
 
 Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
