--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -115,21 +115,15 @@ Moved impact of software tools here - and overall on templated approach on a mic
 
 ## Chapter Introduction  
 
-
-Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters.
-
-This chapter
-
 <!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
 
-- gives an overview of the evolution of the key pedagogical features of the tools of learning design used in my research process
-- (rewrite) draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
-- outlines 4 key conflicts using the terminology of 3GAT
-- Presents a synthesis to initial barriers (and) tactics to overcome them
+Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters. To achieve this aim, this chapter gives an overview of the evolution of the key pedagogical features of the tools of learning design used in my research process. It draws chiefly and on my interpretation of participants reactions recorded in journal notes, these interpretations are also reflected in the evolution in the learning resources which are documented here. To explore emerging tensions in design in a way which communicates relevant context, I outline four conflicts in interrelated activity systems using the terminology of third generation activity theory (3GAT)
+
+This chapter discussion begins with an exploration of the tools used through the lens of authenticity. It continues by covering the mutual nature of the evolution of the design, and ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
+
+
 
 <!-- - Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions. -->
-
-This chapter concludes with an exploration of the tools and authenticity. This focus begins a thread of theoretical inquiry around the impact of authenticity of tools and processes in activity systems of learners experiences of activity systems and particular on building agency in a new learning setting.
 
 
 
