appendix and editing scopes of AT

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -117,9 +117,7 @@ Moved impact of software tools here - and overall on templated approach on a mic
 
 <!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
 
-Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters. To achieve this aim, this chapter gives an overview of the evolution of the key pedagogical features of the tools of learning design used in my research process. It draws chiefly and on my interpretation of participants reactions recorded in journal notes, these interpretations are also reflected in the evolution in the learning resources which are documented here. To explore emerging tensions in design in a way which communicates relevant context, I outline four conflicts in interrelated activity systems using the terminology of third generation activity theory (3GAT)
-
-This chapter discussion begins with an exploration of the tools used through the lens of authenticity. It continues by covering the mutual nature of the evolution of the design, and ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
+Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters. To achieve this aim, this chapter gives an overview of the evolution of the key pedagogical features of the tools of learning design used in my research process. It draws chiefly and on my interpretation of participants reactions recorded in journal notes, these interpretations are also reflected in the evolution in the learning resources which are documented here. To explore emerging tensions in design in a way which communicates relevant context, I outline four conflicts in interrelated activity systems using the terminology of third generation activity theory (3GAT). This chapter discussion begins with an exploration of the tools used through the lens of authenticity. It continues by covering the mutual nature of the evolution of the design, and ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
 
 
 
@@ -131,7 +129,9 @@ This chapter discussion begins with an exploration of the tools used through the
 
 <!-- One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed. Another was to help support the development of peer learning practices and in order to do that help foster a creative environment which suited that. -->
 
-MOVE - As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges. Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s. This chapter charts the evolution of tools and resources which occupy this middle ground between instruction and free choice creative approaches. Following chapters explore the impact and resulting pedagogies in more depth.
+
+
+
 <!-- **Methodology for exposing tensions**
 
 Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
@@ -311,23 +311,26 @@ The shared objective of one activity system is to make entertaining and educatio
 
 ![Illustration 4.x - Larger objectives at game making level ](./Pictures/At_dia_2_v1.png){width=95%}
 
-There are diverse end audiences for the games. The final target audience are students and staff in the Manchester Met Brooks building where their games are shared in arcade cabinets at the end of the course. An additional audience are friends and family who can be send the games to play online.
+There are diverse end audiences for the games. The final target audience are students and staff in the Manchester Met Brooks building where their games are shared in arcade cabinets at the end of the course. An additional audience are friends and family who can be send the games to play online. The more immediate audience for the evolving games are peer game makers during the making sessions.
 
-The more immediate audience for the evolving games are peer game makers during the making sessions. For example, in the vignette above, Toby begins the session playing his own game based on a shared template. During the session he invites many other group members to play his game. He initiates and responds to may conversations around the difficultly of the game he has designed. Analysis of this scope of activity is continued in chapter six.
+![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater2.jpg){width=95%}
+REPLACE WITH DIFFERENT IMAGE?
+
+While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level. In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. A different example of the tension between competing motivations at this larger level of activity is explored in example 4.1 of this chapter and related analysis is continued in chapter six.
+
+In the vignette above, I draw the participants attention to the showcasing of their games to an external audience. Toby begins the session playing his own game. During the course of this session he invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed.
+
 
 <!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
 
-![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater2.jpg){width=95%}
 
-NOTE - More on large scope in AT terms? What is needed here?
+<!--
+NOTE - More on large scope in AT terms? What is needed here? -->
 
 
 #### Mid-level objective - Implementing game elements
 
-
-The process of making a game was driven learners setting goals and requesting help to implement game features. The process involved a diversity of tools and resources depending on the feature chosen and the preferred approach of the learner.
-
-
+At this scope of activity, using the terminology of Engestrom in 3GAT, the object of the activity is the game code and the broad objective is to alter and add  new features to the game using tools available in the learning environment.  
 
 <!-- | Subject         | Objective             | Tools & Processes          |
 |------|-------------|------------|
@@ -340,7 +343,7 @@ The process of making a game was driven learners setting goals and requesting he
 
 Table 4.x.  Tools used in mid-level objectives when selecting and planning implementation of game elements. -->
 
-![At Dia 2](./Pictures/At_dia_1_v1.png){width=95%}
+![Mid-level activity system of game making](./Pictures/At_dia_1_v1.png){width=95%}
 
 <!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
@@ -348,15 +351,23 @@ Table 4.x.  Tools used in mid-level objectives when selecting and planning imple
 By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. -->
 
 <!-- NOTE - how much from p1-4 below to include? -->
-At this scope of activity, using the terminology of Engestrom in 3GAT, the object of the activity is the game code and the objective is to add a new feature to the game using the relevant tools.
 
-In the example above Toby progresses from playtesting his own game to altering it. The code to change the layout of the platforms of the game is already included in the starting template. Thus is able add a new platform by making simple code changes. Toby retests the game immediately by clicking on the preview element of the code environment.
+<!-- In the example above Toby progresses from playtesting his own game to altering it. The code to change the layout of the platforms of the game is already included in the starting template. Thus is able add a new platform by making simple code changes. Toby retests the game immediately by clicking on the preview element of the code environment.  -->
 
-a collection or menu of elements or design patterns (see chapter two and glossary) for the chosen game type of a platformer was in place. Toby browses the web page of a menu of game design patterns and selects moving enemies.
+Overall activity at this level was driven by learners setting goals and requesting help to implement game features. By this stage of the process (see below) Toby is able to browse a collection of game design patterns (see chapter two and glossary) for the chosen game type of a platformer was in place. He selects the pattern named  _moving enemies_.
 
 <!-- However within that wider objective there may be a variety of goals depending on the participant. In this case Toby's goal is addresses the challenge and variety of the game playing experience. -->
 
-While some game patterns were simple to add, e.g. altering the location of platforms, other more complicated features involved several stages and varied tools to implement. The next section describes these stages as discrete code and design structures.
+
+<!-- Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. -->
+
+By this stage, participant had access to a diversity of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette above I outline the two main sources of help at the level of adding a new feature to the game.
+
+    "Mick: So we’ve got two ones. Here’s the tutorial and there’s the examples of code so you can compare what you are doing and see where the new code should be placed."
+
+In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as others in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. In contrast, others participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
+
+<!-- While some game patterns were simple to add, e.g. altering the location of platforms, other more complicated features involved several stages and varied tools to implement. The next section describes these stages as discrete code and design structures. -->
 
 <!-- NOTE - Other participants;s motivations - explored later? -->
 
@@ -379,15 +390,14 @@ While some game patterns were simple to add, e.g. altering the location of platf
 
 <!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
 
+More complicated features involved several stages and varied tools to implement. The next section describes these stages as discrete code and design structures.
+
 NOTE - Overall description and justification of this section.
-
-
 
 Toby undertakes some tasks fluently, for example his the quick navigation between different areas of the game code, the game preview window and  sources of documentation. Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby was undertaking certain chains of processes in a fluid way that shows that actions had become operations. As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers.
 
 In contrast, some tasks are new to Toby and are performed more hesitantly. In the example above Toby is careful is hesitant, checking and rechecking the process of copying and pasting new code into his game from a specially prepared code example which matches the game template he is working on. After inserting the code which adds a moving enemy to the game, Toby spends five minutes altering the variables involved to match his design and to create a level of challenge that he is happy with.
 
-Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. In this example, Toby could, as others in the group were doing in this session, have used an additional resource, in the form of a online and printed tutorials provides more descriptive, step-by-step guidance. Others participants relied only on direct verbal help from myself or other participants and for those participants the help of others like Toby to help them progress was most valuable.
 
 Toby makes quick progress. one factor here is willingness to make mistakes. There is a confidence here in undoing mistakes, commenting out new code to return to previous behaviour.
 
@@ -1383,6 +1393,8 @@ This chapter has dealt with the evolution of design in initial phases and respon
 Retrospective analysis of my design naive approach exposes parallels with the HCI literature, constructionist principles and research on learning programming syntax. DEVELOP
 
 Resnick's design principles are focused on the affordances of tool for creative experimentation and expression via media authoring.
+
+MOVED - SO MERGE - As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges. Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s. This chapter charts the evolution of tools and resources which occupy this middle ground between instruction and free choice creative approaches. Following chapters explore the impact and resulting pedagogies in more depth.
 
 The emphasis is on tools that can remove barriers to personal expression, rather than on pedagogic processes than can help teachers facilitate guided production. Viewed from a lens of situated, community driven production, there is a potential critique that these processes are under-explored in the school of constructionism.
 
